# Jokes

./: README.md  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: test-package.yml
dad_jokes/: jokes.py  jokesv2.py
tests/: context.py  test.py
