[tool.poetry]
name = "dad-jokes"
version = "0.1.0"
description = "Python wrapper for the dad jokes API provided by icanhazdadjokes.com"
authors = ["Freedom Loisa <kitakayaloisa@gmail.com>"]
readme = "README.md"
packages = [{include = "dad_jokes"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
